# launcher

./: .eslintignore  .eslintrc  .gitignore  .prettierignore  .prettierrc.yaml  README.md  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  flake.nix  launcher.config.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_seeds.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tests.json
.github/workflows/: get-versions.yaml  holochain-binaries.yaml  lair-binaries.yaml  release.yaml  test-draft-releas.yaml  test-draft-release.yaml  test-release.yaml  test-serve.yaml
.husky/: pre-commit  pre-push
docs/: ubuntu-24.md
libs/appstore/: .gitignore  README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo
libs/appstore/src/: index.ts  intex.ts  (+2 more)
resources/: .gitignore
rust-utils/: Cargo.toml  index.d.ts  index.js  package.json
rust-utils/npm/darwin-x64/: README.md  package.json
rust-utils/npm/linux-x64-gnu/: README.md  package.json
rust-utils/npm/win32-x64-msvc/: README.md  package.json
rust-utils/src/: conductor_config.rs  decode_webapp.rs  key_generation.rs  launcher_lair_client.rs  lib.rs  types.rs  utils.rs  zome_call_signer.rs
scripts/: check-binaries.mjs  check-todos.sh  extend-deb-postinst.mjs  fetch-apps-and-binaries.mjs  fetch-binaries.mjs  fetch-default-apps.mjs  hash.js  latest-yaml.js  merge-mac-yamls.mjs  notarize.js  setup-binaries.sh  update-electron-builder.js  utils.mjs
src/main/: binaries.ts  cli.ts  const.ts  filesystem.ts  holochainManager.ts  index.ts  integrityChecker.ts  lairKeystore.ts  launcherEmitter.ts  logs.ts  menu.ts  paths.ts  trpcHelpers.ts  utils.ts  windows.ts
src/preload/: admin.ts  happs.ts
src/renderer/: .eslintrc.cjs  .prettierrc  eslint.config.js  package.json  svelte.config.js  tailwind.config.ts  theme.ts  tsconfig.json  vite.config.ts
src/types/: errors.ts  eventEmitters.ts  holochain.ts  index.ts  launcher.ts
(+244 files in other folders)
