[package]
edition = "2021"
name = "hc-launcher-rust-utils"
version = "0.203.2"

[lib]
crate-type = ["cdylib"]

[dependencies]
holochain_conductor_api = "=0.4.0-dev.12"
holochain_integrity_types = "=0.4.0-dev.9"
holochain_p2p = "=0.4.0-dev.12"
holochain_types = "=0.4.0-dev.12"
holochain_zome_types = "=0.4.0-dev.10"
holo_hash = "=0.4.0-dev.8"
kitsune_p2p_timestamp = "=0.4.0-dev.2"
hc_seed_bundle = "0.2.4"
lair_keystore_api = "0.4.5"


base64 = "0.13.0"
base36 = "=0.0.1"
ed25519-dalek = { version = "1.0.1" }
nanoid = "0.4.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
  "napi4",
  "tokio_rt",
  "async",
  "serde-json",
] }
napi-derive = "2.12.2"
pinentry = "0.5.0"
secrecy = "0.8.0"
serde_json = "1.0.117"
serde_yaml = "0.8"
sodoken = "0.0.9"
url2 = "0.0.6"
zip = "0.5.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
